<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/linearLayoutStyle.vertical"
    tools:context="com.example.valentina.smartestudiantes.InicioFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        style="@style/textViewStyle.Title"
        android:text="@string/smart" />


    <TextView
        style="@style/textViewStyle.Content.otros"
        android:text="@string/Entidad"/>
    <Button
        android:layout_marginTop="70dp"
        style="@style/buttonStyle.opc2"
        android:text="@string/salones"
        android:layout_gravity="center"
        android:id="@+id/bSalones"/>
    <Button
        android:layout_marginTop="25dp"
        style="@style/buttonStyle.opc2"
        android:text="@string/estudiantes"
        android:layout_gravity="center"
        android:id="@+id/bEstudiantes"/>

    <Button
        android:layout_marginTop="25dp"
        style="@style/buttonStyle.opc2"
        android:text="@string/profesores"
        android:layout_gravity="center"
        android:id="@+id/bProfes"/>

</LinearLayout>
