<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/linearLayoutStyle.vertical"
    tools:context="com.example.valentina.smartestudiantes.ProfesoresFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        style="@style/textViewStyle.Title"
        android:text="@string/smart" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <TextView
            style="@style/textViewStyle.Content.otros"
            android:text="@string/Entidad"/>
        <TextView
            style="@style/textViewStyle.Content.otros"
            android:text="-"/>
        <TextView
            style="@style/textViewStyle.Content.otros"
            android:text="@string/profesores"/>
    </LinearLayout>

    <Button
        android:layout_marginTop="70dp"
        style="@style/buttonStyle.opc2"
        android:text="@string/agregar"
        android:layout_gravity="center"
        android:id="@+id/bAgregarP"/>
    <Button
        android:layout_marginTop="25dp"
        style="@style/buttonStyle.opc2"
        android:text="@string/modificar"
        android:layout_gravity="center"
        android:id="@+id/bModificarP"/>

    <Button
        android:layout_marginTop="25dp"
        style="@style/buttonStyle.opc2"
        android:text="@string/eliminar"
        android:layout_gravity="center"
        android:id="@+id/bEliminarP"/>



</LinearLayout>
