<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/linearLayoutStyle.vertical"
    tools:context="com.example.valentina.smartestudiantes.NotasFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        style="@style/textViewStyle.Title"
        android:text="@string/smart" />


    <TextView
        style="@style/textViewStyle.Content.otros"
        android:text="@string/Entidad"/>

    <LinearLayout
        android:layout_marginTop="50dp"
        style="@style/linearLayoutStyle.horizontal"
        android:orientation="horizontal">
        <TextView
            style="@style/textViewStyle.Content"
            android:text="@string/contrato"/>
        <EditText
            style="@style/editTextStyle"
            android:id="@+id/suario"/>
    </LinearLayout>

    <Button
        style="@style/buttonStyle"
        android:text="@string/ingresar"
        android:layout_gravity="center"
        android:id="@+id/bIngresar"/>



    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>

</LinearLayout>
