<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/linearLayoutStyle.vertical"
    tools:context="com.example.valentina.smartestudiantes.LibrosFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        style="@style/textViewStyle.Title"
        android:text="@string/smart" />


    <TextView
        style="@style/textViewStyle.Content.otros"
        android:text="@string/Entidad"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <TextView
            style="@style/textViewStyle.Content.otros"
            android:text="@string/Entidad"/>
        <TextView
            style="@style/textViewStyle.Content.otros"
            android:text="-"/>
        <TextView
            style="@style/textViewStyle.Content.otros"
            android:text="@string/libros"/>

    </LinearLayout>

    <ListView
        style="@style/listViewStyle"
        android:id="@+id/lLibros"></ListView>

</LinearLayout>
